# CPA-Helper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  VERSION  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260504_0001_initial.py  20260506_0001_model_price_sync_metadata.py  20260506_0002_api_key_alias_colors.py  20260506_0003_users_api_keys.py  20260506_0004_user_account_fields.py  20260506_0005_usage_user_key_snapshots.py  20260506_0006_remove_user_colors.py  20260506_0007_store_full_user_api_keys.py  20260506_0008_store_full_usage_api_keys.py  20260506_0009_unmask_usage_auth.py  20260506_0010_remove_user_name_and_aliases.py  20260506_0011_store_settings_in_db.py  20260506_0012_move_login_account_to_users.py  20260506_0013_remove_usage_user_account.py  20260507_0001_remove_usage_record_api_key_identity.py  20260508_0001_rename_user_remark_to_nickname.py  20260508_0002_soft_delete_users_usage_username.py  (+6 more)
backend/app/: __init__.py  main.py
backend/migrations/: 202607030001_remove_card_shop_tables.sql  202607100001_usage_service_tier_fast_pricing.go  202607110001_model_price_long_context.go  202607110001_model_price_long_context_test.go  202607120001_model_price_channels.go  202607120001_model_price_channels_test.go  202607150001_model_price_channel_auth_type.go  202607150001_model_price_channel_auth_type_test.go  202607160001_codex_keeper_auth_index.go  202607200001_usage_history_query_indexes.sql  migrations.go
backend/tests/: conftest.py
(+129 files in other folders)
